--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+      <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
   </head>
@@ -14,7 +15,7 @@
     <!--header-->
     <header class="header">
       <div class="container header-nav">
-        <nav class="header-nav">
+        <nav class="header-nav-menu">
         <a href="./index.html" aria-label="Logo" class="logo">Web<span class="header-logo">Studio</span></a>
         <ul class="site-nav list">
           <li class="item"><a href="./index.html" class="site-nav-link current">Студия</a></li>
@@ -360,7 +361,7 @@
           </div>
           <div class="footer-center ">
             <h2 class="footer-center-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
-            <ul class="list footer-list-center">
+            <ul class="list footer-center-list">
               <li class="footer-social">
                 <a class="footer-icon" href="">
                   <svg class="footer-svg" width="20px" height="20px">
