--- a/portfolio.html
+++ b/portfolio.html
@@ -218,76 +218,75 @@
         </section>
     </main>
 <!--Footer-->
-     <footer class="footer">
-                <div class="footer-container container">
-                    <div class="footer-left">
-                        <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
-                        <address class="adress">
-                            <ul class="footer-list list">
-                                <li class="adress-list">
-                                    <a class="location-link" href="https://goo.gl/maps/Xqh2hJg4J4XLnShu8" target="_blank"><span
-                                            class="location">г. Киев, пр-т
-                                            Леси
-                                            Украинки, 26</span></a></li>
-                                <li class="adress-list">
-                                    <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
-                                </li>
-                                <li class="adress-list">
-                                    <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a>
-                                </li>
-                            </ul>
-                        </address>
+    <footer class="footer">
+        <div class="footer-container container">
+            <div class="footer-left">
+                <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
+                <address class="adress">
+                    <ul class="footer-list list">
+                        <li class="adress-list">
+                            <a class="location-link" href="https://goo.gl/maps/Xqh2hJg4J4XLnShu8" target="_blank"><span
+                                    class="location">г. Киев, пр-т
+                                    Леси
+                                    Украинки, 26</span></a></li>
+                        <li class="adress-list">
+                            <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a>
+                        </li>
+                        <li class="adress-list">
+                            <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-center ">
+                <h2 class="footer-center-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
+                <ul class="list footer-center-list">
+                    <li class="footer-social">
+                        <a class="footer-icon" href="">
+                            <svg class="footer-svg" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-insta"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social">
+                        <a class="footer-icon" href="">
+                            <svg class="footer-svg" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    <li class="footer-social">
+                        <a class="footer-icon" href="">
+                            <svg class="footer-svg" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social">
+                        <a class="footer-icon" href="">
+                            <svg class="footer-svg" width="20px" height="20px">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-right">
+                <form action="#" class="footer-form">
+                    <div class="text-right-container">
+                        <h2 class="footer-title-right">Подпишитесь на рассылку</h2>
+                        <input type="email" name="user-email" placeholder="E-mail" class="footer-mail">
                     </div>
-                    <div class="footer-center ">
-                        <h2 class="footer-center-title">ПРИСОЕДИНЯЙТЕСЬ</h2>
-                        <ul class="list footer-list-center">
-                            <li class="footer-social">
-                                <a class="footer-icon" href="">
-                                    <svg class="footer-svg" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#icon-insta"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-social">
-                                <a class="footer-icon" href="">
-                                    <svg class="footer-svg" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                            <li class="footer-social">
-                                <a class="footer-icon" href="">
-                                    <svg class="footer-svg" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="footer-social">
-                                <a class="footer-icon" href="">
-                                    <svg class="footer-svg" width="20px" height="20px">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="button-container">
+                        <button class="footer-button button" type="submit">Подписаться
+                            <svg class="icon-send">
+                                <use href="./images/symbol-def2.svg#icon-send"></use>
+                            </svg>
+                        </button>
                     </div>
-                            <div class="footer-right">
-                                <form action="#" class="footer-form">
-                                    <div class="text-right-container">
-                                        <h2 class="footer-title-right">Подпишитесь на рассылку</h2>
-                                        <input type="email" name="user-email" placeholder="E-mail" class="footer-mail">
-                                    </div>
-                                    <div class="button-container">
-                                        <button class="footer-button button" type="submit">Подписаться
-                                            <svg class="icon-send">
-                                                <use href="./images/symbol-def2.svg#icon-send"></use>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                </div>
-
-            </footer>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
