--- a/portfolio.html
+++ b/portfolio.html
@@ -8,15 +8,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/portfolio.min.css">
+    <!-- <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 
 <body class="page">
     <!--header-->
 <header class="header">
     <div class="container header-nav">
-        <nav class="header-nav">
+        <nav class="header-nav-menu">
             <a href="./index.html" aria-label="Logo" class="logo">Web<span class="header-logo">Studio</span></a>
             <ul class="site-nav list">
                 <li class="item"><a href="./index.html" class="site-nav-link">Студия</a></li>
@@ -46,6 +47,7 @@
         </address>
     </div>
 </header>
+
 <!--portfolio offer -->
     <main class="main page">
         <section class="portfolio">
